assets/ufpsapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ufpsapp-service
spec:
  selector:
    app: ufpsapp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
